fixed images and layout issues. Added images and links on home page

--- a/Milestone1.css
+++ b/Milestone1.css
@@ -5,9 +5,8 @@ body {
     background-repeat: no-repeat;
     background-color: gray;
   }
-  /*  CSS for body */
+  /*  CSS for images */
   img{
-    float: left;
     width: 300px;
     height: 300px;
     padding: 25px;
